--- a/src/app/(marketing)/[locale]/help/docs.css
+++ b/src/app/(marketing)/[locale]/help/docs.css
@@ -8,7 +8,7 @@
  *
  * @see https://fumadocs.vercel.app/docs/ui/theme
  */
-@source '../../../node_modules/fumadocs-ui/dist/**/*.js';
+@source '../../../../node_modules/fumadocs-ui/dist/**/*.js';
 
 /**
  * Help Center Layout Overrides
@@ -140,3 +140,4 @@
     display: none !important;
   }
 }
+
